weather z-index and full-stack background color fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body{
     border-radius: 10px;
     margin-top: 10%;
     background-color: rgba(14, 14, 136, 0.5);
+    z-index: +1;
 }
 #stickyNav{
     position: -webkit-sticky;
@@ -64,7 +65,7 @@ a.highlight:hover{
     border-style: solid;
     border-width: 5px;
     border-radius: 25%;
-    border-color: aquamarine;
+    border-color: rgba(136, 127, 255, 0.521);
 }
 .hello{
     position: relative;
@@ -77,6 +78,7 @@ a.highlight:hover{
     color: white;
     margin: 1em;
     line-height: 75%;
+    z-index: -1;
 }
 #hello1{
     text-indent: -10px;
@@ -128,8 +130,11 @@ a.highlight:hover{
     margin: auto;
 }
 #full-stack{
-    margin: 3em;
+    margin: 10%;
     text-align: justify;
+    padding: 2%;
+    background-color: #34b6d617;
+    border: solid white;
 
 }
 #hamid{
@@ -263,7 +268,7 @@ display: flex;
 justify-content: center;
 }
 #contactDiv{
-    color: white;
+    color: rgba(255, 255, 255, 0.75);
     border: 5px solid;
     width: 30%;
     align-content: left;
